@@ -10,7 +10,6 @@ using System.IO;
 
 namespace Oak
 {
-    [DebuggerNonUserCode]
     public class Seed
     {
         public virtual ConnectionProfile ConnectionProfile { get; set; }
@@ -35,6 +34,18 @@ namespace Oak
         /// <returns>Returns the sql command generated by seed.</returns>
         public string CreateTable(string table, params dynamic[] columns)
         {
+            return CreateTable("dbo", table, columns);
+        }
+
+        /// <summary>
+        /// Generates script for creating a table.  Use ExecuteNonQuery() 
+        /// to execute script.  ExecuteNonQuery is an 
+        /// extension method on string (if you dont see the extension method, 
+        /// make sure you have using Oak; in your cs file.
+        /// </summary>
+        /// <returns>Returns the sql command generated by seed.</returns>
+        public string CreateTable(string schema, string table, params dynamic[] columns)
+        {
             string columnString = "";
 
             var primaryKeyColumns = new List<string>();
@@ -48,7 +59,7 @@ namespace Oak
                 columnString += ColumnStringFor(column) + ",";
             }
 
-            return CreateTableCommand(table, columnString, primaryKeyColumns);
+            return CreateTableCommand(schema, table, columnString, primaryKeyColumns);
         }
 
         /// <summary>
@@ -59,6 +70,22 @@ namespace Oak
         /// <param name="columns"></param>
         /// <returns></returns>
         public string AddColumns(string table, params dynamic[] columns)
+        {
+            return AddColumns("dbo", table, columns);
+        }
+
+        public string CreateSchema(string schema)
+        {
+            return "CREATE SCHEMA {0}".With(schema);
+        }
+        /// <summary>
+        /// Generates script to create columns.  Use ExecuteNonQuery()
+        /// to execute script.
+        /// </summary>
+        /// <param name="table"></param>
+        /// <param name="columns"></param>
+        /// <returns></returns>
+        public string AddColumns(string schema, string table, params dynamic[] columns)
         {
             string columnString = "";
 
@@ -71,8 +98,8 @@ namespace Oak
                 if (i != columns.Length - 1) columnString += ", ";
             }
 
-            return "ALTER TABLE [dbo].[{0}] ADD {1}"
-                .With(table, columnString);
+            return "ALTER TABLE [{0}].[{1}] ADD {2}"
+                .With(schema, table, columnString);
         }
 
         string ColumnStringFor(object column)
@@ -98,7 +125,7 @@ namespace Oak
                         .Trim();
         }
 
-        string CreateTableCommand(string table, string columns, List<string> primaryKeyColumns)
+        string CreateTableCommand(string schema, string table, string columns, List<string> primaryKeyColumns)
         {
             var primaryKeyColumnScript = string.Join(",", primaryKeyColumns.Select(s => "[{0}] ASC".With(s)));
 
@@ -107,7 +134,7 @@ namespace Oak
 
             if (!primaryKeyColumns.Any()) primaryKeyScript = "";
 
-            return "CREATE TABLE [dbo].[{0}]({1}{2})".With(table, columns, primaryKeyScript);
+            return "CREATE TABLE [{0}].[{1}]({2}{3})".With(schema, table, columns, primaryKeyScript);
         }
 
         public void PurgeDb()
@@ -115,35 +142,82 @@ namespace Oak
             DropAllForeignKeys();
             DropAllPrimaryKeys();
             DropAllTables();
+            DropCustomSchemas();
+        }
+
+        private void DropCustomSchemas()
+        {
+            var reader = @"SELECT name FROM sys.schemas".ExecuteReader(ConnectionProfile);
+
+            while (reader.Read())
+            {
+                var schemaName = reader["name"];
+
+                if (!DefaultSchemas().Contains(schemaName))
+                {
+                    "drop schema [{0}] ".With(schemaName).ExecuteNonQuery(ConnectionProfile);
+                }
+            }
+        }
+
+        List<string> DefaultSchemas()
+        {
+            return new List<string> 
+            {
+                "dbo",
+                "guest",
+                "INFORMATION_SCHEMA",
+                "sys",
+                "db_owner",
+                "db_accessadmin",
+                "db_securityadmin",
+                "db_ddladmin",
+                "db_backupoperator",
+                "db_datareader",
+                "db_datawriter",
+                "db_denydatareader",
+                "db_denydatawriter"
+            };
         }
 
         void DropAllForeignKeys()
         {
-            var reader = "select name as constraint_name, object_name(parent_obj) as table_name from sysobjects where xtype = 'f'".ExecuteReader(ConnectionProfile);
+            var reader = @"
+            select  name as constraint_name,
+                    object_name(parent_obj) as table_name,
+                    object_schema_name(parent_obj) as table_schema
+            from sysobjects where xtype = 'f'".ExecuteReader(ConnectionProfile);
 
             while (reader.Read())
             {
-                "alter table {0} drop constraint {1} ".With(reader["table_name"], reader["constraint_name"]).ExecuteNonQuery(ConnectionProfile);
+                "alter table [{0}].[{1}] drop constraint {2} ".With(reader["table_schema"], reader["table_name"], reader["constraint_name"]).ExecuteNonQuery(ConnectionProfile);
             }
         }
 
         void DropAllPrimaryKeys()
         {
-            var reader = "select name as constraint_name, object_name(parent_obj) as table_name from sysobjects where xtype = 'pk'".ExecuteReader(ConnectionProfile);
+            var reader = @"
+            select  name as constraint_name, 
+                    object_name(parent_obj) as table_name,
+                    object_schema_name(parent_obj) as table_schema 
+            from sysobjects where xtype = 'pk'".ExecuteReader(ConnectionProfile);
 
             while (reader.Read())
             {
-                "alter table {0} drop constraint {1} ".With(reader["table_name"], reader["constraint_name"]).ExecuteNonQuery(ConnectionProfile);
+                "alter table [{0}].[{1}] drop constraint {2} ".With(reader["table_schema"], reader["table_name"], reader["constraint_name"]).ExecuteNonQuery(ConnectionProfile);
             }
         }
 
         void DropAllTables()
         {
-            var reader = "select name as table_name from sysobjects where xtype = 'u'".ExecuteReader(ConnectionProfile);
+            var reader = @"
+            select  name as table_name, 
+                    object_schema_name(id) as table_schema 
+            from sysobjects where xtype = 'u'".ExecuteReader(ConnectionProfile);
 
             while (reader.Read())
             {
-                "drop table {0} ".With(reader["table_name"]).ExecuteNonQuery(ConnectionProfile);
+                "drop table [{0}].[{1}] ".With(reader["table_schema"], reader["table_name"]).ExecuteNonQuery(ConnectionProfile);
             }
         }
 
@@ -218,25 +292,40 @@ namespace Oak
             EnableKeyConstraints().ExecuteNonQuery(ConnectionProfile);
         }
 
+        public string RenameColumn(string schema, string table, string currentColumnName, string newColumnName)
+        {
+            return "sp_rename '[{0}].[{1}].[{2}]', '{3}', 'COLUMN'".With(schema, table, currentColumnName, newColumnName);
+        }
+
         public string RenameColumn(string table, string currentColumnName, string newColumnName)
         {
-            return "sp_rename '{0}.{1}', '{2}', 'COLUMN'".With(table, currentColumnName, newColumnName);
+            return RenameColumn("dbo", table, currentColumnName, newColumnName);
+        }
+
+        public string DropColumn(string schema, string table, string column)
+        {
+            return "alter table [{0}].[{1}] drop column {2}".With(schema, table, column);
         }
 
         public string DropColumn(string table, string column)
         {
-            return "alter table {0} drop column {1}".With(table, column);
+            return DropColumn("dbo", table, column);
         }
 
-        public string DropConstraint(string table, string forColumn)
+        public string DropConstraint(string schema, string table, string forColumn)
         {
             var name = @"
             select CONSTRAINT_NAME
             from INFORMATION_SCHEMA.KEY_COLUMN_USAGE 
-            where TABLE_NAME = '{0}' 
-            and COLUMN_NAME = '{1}'".With(table, forColumn).ExecuteScalar(ConnectionProfile);
+            where CONSTRAINT_SCHEMA = '{0}' and TABLE_NAME = '{1}'
+            and COLUMN_NAME = '{2}'".With(schema, table, forColumn).ExecuteScalar(ConnectionProfile);
 
-            return "alter table {0} drop constraint {1}".With(table, name);
+            return "alter table [{0}].[{1}] drop constraint {2}".With(schema, table, name);
+        }
+
+        public string DropConstraint(string table, string forColumn)
+        {
+            return DropConstraint("dbo", table, forColumn);
         }
 
         public void ExecuteUpTo(IEnumerable<Func<dynamic>> scripts, Func<dynamic> method)
