@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="jQuery" version="1.8.2" targetFramework="net40" />
-  <package id="oak-edge" version="1.9.5" targetFramework="net40" />
+  <package id="oak-edge" version="1.9.6" targetFramework="net40" />
   <package id="rake-dot-net" version="1.3.0" targetFramework="net40" />
   <package id="specwatchr" version="1.6.9" targetFramework="net40" />
 </packages>
